edit audio function

--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
         <div id="tonearm" class="absolute -top-2 -right-2 w-8 h-12 border-r-2 border-gray-400 rounded-tr-lg origin-top-right transform -rotate-45 transition-transform duration-500"></div>
     </div>
 
-    <audio id="bg-music" loop>
-        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
-    </audio>
+    <div id="youtube-player" class="absolute pointer-events-none opacity-0 translate-y-full"></div>
+</div>
 </div>
 <div id="secret-modal" class="fixed inset-0 bg-black bg-opacity-80 z-[100] hidden flex justify-center items-center backdrop-blur-sm">
     <div class="bg-gray-900 text-green-400 p-8 rounded-lg font-mono border-2 border-green-500 w-11/12 max-w-lg shadow-[0_0_20px_rgba(0,255,0,0.5)]">
