--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jira & Party's Journey</title>
+    <title>Our Story, Our Journey</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Mali:wght@300;500;700&display=swap" rel="stylesheet">
     
@@ -35,7 +35,7 @@
             <h1 class="text-4xl md:text-6xl font-bold text-pink-500 mb-4 drop-shadow-sm hover:scale-105 transition-transform duration-300">
                 Jira <span class="text-red-400">❤</span> Party
             </h1>
-            <p class="text-xl text-gray-500">Our Story, Our Journey</p>
+            <p class="text-xl text-gray-500"></p>
             <div class="mt-8 animate-bounce">
                 👇 เลื่อนลงเพื่อย้อนเวลา
             </div>
@@ -111,4 +111,5 @@
     <script src="script.js"></script>
 
 </body>
+
 </html>
