--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
         <div class="z-10 cursor-pointer" id="hero-content">
             <h1 class="text-4xl md:text-6xl font-bold text-pink-500 mb-4 drop-shadow-sm hover:scale-105 transition-transform duration-300">
-                Jira <span class="text-red-400">❤</span> Party
+                Our Story<span class="text-red-400">❤</span>Our Journey
             </h1>
             <p class="text-xl text-gray-500"></p>
             <div class="mt-8 animate-bounce">
